# Freelancernetwork

./: README.md  app.py  main.py  models.py  pyproject.toml  routes.py
attached_assets/: Pasted--Cloning-from-https-github-com-CalypsoXO12-Freelancernetwork-Checking-out-commit-6055c4c6e9af-1748663146157.txt  Pasted--Cloning-from-https-github-com-CalypsoXO12-Freelancernetwork-Checking-out-commit-a10ec8015-1748663316937.txt  Pasted--Cloning-from-https-github-com-CalypsoXO12-Freelancernetwork-Checking-out-commit-a10ec801595-1748663540081.txt  Pasted--Hello-Replit-AI-I-need-you-to-build-a-complete-responsive-and-user-friendly-website-called-Fre-1748660251763.txt
static/css/: style.css
static/js/: calculators.js
templates/: about.html  base.html  contact.html  hourly-rate-calculator.html  index.html  premium-features.html  premium-success.html  privacy.html  project-profit-calculator.html  terms.html
