[tool.poetry]
name = "freelance-financial-toolkit"
version = "0.1.0"
description = "Essential financial tools for independent professionals"
authors = ["Freelance Financial Toolkit <toolkitfreelance@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
email-validator = ">=2.2.0"
flask-dance = ">=7.1.0"
flask = ">=3.1.1"
flask-sqlalchemy = ">=3.1.1"
gunicorn = ">=23.0.0"
psycopg2-binary = ">=2.9.10"
werkzeug = ">=3.1.3"
flask-login = ">=0.6.3"
oauthlib = ">=3.2.2"
pyjwt = ">=2.10.1"
sqlalchemy = ">=2.0.41"
stripe = ">=12.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
